--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,11 +115,19 @@ table, th{
   border: 2px solid black;
   text-align: center;
 }
+th{
+  font-size: 20px;
+}
 
 td{
   text-align: center;
+  font-size: 15px;
 }
 a{
   text-align: left;
   font-size: 20px;
+}
+
+h2.today{
+  text-align: center;
 }
