--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   
   h1(class= "titletext") Welcome to the Baylor Weather App 
+  a(href= '/archive' class=) The Archive
   // Get the most recent data and sort the array with most
   // recent data first
   - var today = current[0]
@@ -17,16 +18,19 @@ block content
     else
       -var time = today.time.getHours() + ":" +today.time.getMinutes() + "A.M.";
     div(class= "navbar")
-      p(class= "navTitle") Today: #{today.time.getMonth()}/#{today.time.getDate()}/#{today.time.getFullYear()} #{time} 
+      p(class= "navTitle") Today: #{today.time.getMonth() + 1}/#{today.time.getDate()}/#{today.time.getFullYear()} #{time} 
       table(class= "navTable")
         tr(class= "navRow")
           td(class= "navData") Temperature: #{today.temperature}&deg;F 
-          td(class= "navData") Wind Speed: #{today.windSpeed}mph
-          td(class= "navData") Pressure: #{today.pressure}psi
-    a(href= '/archive') The Archive    
+          td(class= "navData") Wind Speed: #{today.windSpeed}mph #{today.windDirection}
+          -var press = Math.round((today.pressure/0.02853)*100)/100;
+          td(class= "navData") Pressure: #{today.pressure}inHg #{press}Hpa
+          td(class= "navData") Humidity: #{today.humidity}%
+    
     p A daily history of the weather data collected.
     h2(class= "today") Today's Data:
     for data in results
+      -press = Math.round((data.pressure/0.02853)*100)/100;
       if data.time.getHours() > 12
         -time = data.time.getHours() - 12;
         -time = time + ":" + data.time.getMinutes() + "P.M."
@@ -36,7 +40,7 @@ block content
         <div class="sunny">
           <div class="weathertext">
             h1(class= text) 
-            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed} Mph<br />#{data.pressure} psi
+            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed}Mph #{today.windDirection}<br />#{press}inHg
           </div>
         </div>
 
@@ -44,7 +48,7 @@ block content
         <div class="chilly">
           <div class="weathertext">
             h1(class= text) 
-            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed} Mph<br />#{data.pressure} psi
+            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed}Mph #{today.windDirection}<br />#{press}inHg
           </div>
         </div>
 
@@ -53,7 +57,7 @@ block content
         <div class="freezing">
           <div class="weathertext">
             h1(class= text) 
-            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed} Mph<br />#{data.pressure} psi
+            p #{time}<br />#{data.temperature}&deg;F<br />#{data.windSpeed}Mph #{today.windDirection}<br />#{press}inHg
           </div>
         </div>
 
