--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,7 +102,7 @@ h2{
   font-size: 35px;
 }
 tr.archiveRow:nth-child(even){
-  background-color: rgb(65, 176, 240);
+  background-color: rgb(205, 240, 11);
 }
 tr.archiveRow:nth-child(odd){
   background: rgb(98, 175, 98);
@@ -130,7 +130,7 @@ a{
   text-align: center;
   text-decoration: none;
   font-size: 25px;
-  margin-top: -30px; 
+  border: solid black 5px;
 }
 
 a:hover{
@@ -145,4 +145,8 @@ table.navTable, td.navData{
   border-collapse: collapse;
   border: 10px solid black;
   font-size: 30px;
+}
+
+p.Description{
+  text-align: center;
 }
