--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,7 +53,7 @@ h1.titletext{
 }
 
 .chilly{
-  background-image: url("../images/Chilly.png");
+  background-image: url("../images/chilly.png");
 
   height: 50%;
 
